# gene-expression-cpp

./: .gitignore  CMakeLists.txt  README.md  best_gene.ppm
include/: ClusteringMethods.hpp  DataStructures.hpp  GeneExpressionAnalysis.hpp
src/: ClusteringMethods.cpp  GeneExpressionAnalysis.cpp  main.cpp
